# ukt-dashboard-api

./: .gitignore  .gitmodules  Cargo.toml  config.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: config.rs  lib.rs
dev/: Caddyfile  Dockerfile  config.toml  docker-bake.hcl  docker-compose.yml  host-side.dockerfile  http-client.env.json  v1.http
enumerate/: Cargo.toml
enumerate/src/: lib.rs
examples/: test.rs
src/: cache.rs  config.rs  main.rs  v1.rs
src/v1/: buses.rs  buses_schema.rs  config.rs  mod.rs  weather.rs  weather_schema.rs
stopfinder/: Cargo.toml
stopfinder/src/: io.rs  main.rs  schema.rs
webview/: Cargo.toml
webview/src/: main.rs
