[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"

actix-web = { version = "4.11.0", features = [] }
tokio = { version = "1.48.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
clap = { version = "4.5.51", features = ["derive"] }

serde_qs = "1.0.0-rc.3"
serde_urlencoded = "0.7.1"