[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "./common" }

log = "0.4.28"
env_logger = "0.11.8"

actix-web = { version = "4.11.0", features = [] }

reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

serde_qs = "1.0.0-rc.3"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["std", "serde"] }
nestify = "0.3.3"

[workspace]
members = ["common", "enumerate","stopfinder", "webview"]
