[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
enumerate = { path = "../enumerate" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
clap = { version = "4.5.51", features = ["derive"] }

tokio = { version = "1.48.0", features = ["full"] }
